fix: white space to be pre-wrap (#774)

--- a/src/v4/social/elements/UserDescription/UserDescription.module.css
+++ b/src/v4/social/elements/UserDescription/UserDescription.module.css
@@ -3,6 +3,10 @@
   word-break: break-word;
 }
 
+.userDescription__description__text {
+  white-space: pre-wrap;
+}
+
 .userDescription__seeMore__button {
   color: var(--asc-color-primary-default);
 }
